--- a/AnimalShelterAPI/Properties/launchSettings.json
+++ b/AnimalShelterAPI/Properties/launchSettings.json
@@ -1,11 +1,12 @@
+
 {
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:39894",
-      "sslPort": 44321
+      "applicationUrl": "http://localhost:64564",
+      "sslPort": 44389
     }
   },
   "profiles": {
@@ -17,6 +18,15 @@
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
+    "CretaceousApi-Production": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
+      "launchBrowser": false,
+      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Production"
       }
     },
     "IIS Express": {
